--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,7 +17,11 @@ jobs:
           pip install pytest
           pip install expecttest
       - name: Do testing
+        id: do_test
         run: pytest test/test_bundled_inputs.py test/test_comparison_utils.py
+      -name: Check failures
+        if: job.steps.do_test.status == failure()
+        run: exit 1
   
   another-py-test:
     runs-on: self-hosted
@@ -28,4 +32,8 @@ jobs:
           pip install pytest
           pip install expecttest
       - name: Do testing
+        id: do_test
         run: pytest test/profiler
+      -name: Check failures
+        if: job.steps.do_test.status == failure()
+        run: exit 1
