--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Do testing
         id: do_test
         run: pytest test/test_bundled_inputs.py test/test_comparison_utils.py
-      -name: Check failures
-        if: steps.do_test.status != 'success'
-        run: exit 1
+      # -name: Check failures
+      #   if: steps.do_test.status != 'success'
+      #   run: exit 1
   
   another-py-test:
     runs-on: self-hosted
@@ -34,6 +34,6 @@ jobs:
       - name: Do testing
         id: do_test
         run: pytest test/profiler
-      -name: Check failures
-        if: steps.do_test.status != 'success'
-        run: exit 1
+      # -name: Check failures
+      #   if: steps.do_test.status != 'success'
+      #   run: exit 1
