--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,7 +20,7 @@ jobs:
         id: do_test
         run: pytest test/test_bundled_inputs.py test/test_comparison_utils.py
       - name: Check failures
-        if: {{ steps.do_test.status }} != "success"
+        if: {{ steps.do_test.status != "success" }}
         run: exit 1
   
   another-py-test:
