--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,11 +17,8 @@ jobs:
           pip install pytest
           pip install expecttest
       - name: Do testing
-        id: do_test
+        id: do_test_1
         run: pytest test/test_bundled_inputs.py test/test_comparison_utils.py
-      - name: Check failures
-        if: {{ steps.do_test.status != "success" }}
-        run: exit 1
   
   another-py-test:
     runs-on: self-hosted
@@ -32,8 +29,5 @@ jobs:
           pip install pytest
           pip install expecttest
       - name: Do testing
-        id: do_test
+        id: do_test_2
         run: pytest test/profiler
-      # - name: Check failures
-      #   if: steps.do_test.status != "success"
-      #   run: exit 1
