--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Do testing
         id: do_test_1
         run: pytest test/test_bundled_inputs.py test/test_comparison_utils.py
+      - name: Check failure
+        if: steps.do_test_1.status == 'failure'
+        run: exit 1
   
   another-py-test:
     runs-on: self-hosted
