--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -20,7 +20,7 @@ jobs:
         id: do_test_1
         run: pytest test/test_bundled_inputs.py test/test_comparison_utils.py
       - name: Check failure
-        if: steps.do_test_1.status == 'failure'
+        if: steps.do_test_1.status != 'success'
         run: exit 11
   
   another-py-test:
@@ -35,5 +35,5 @@ jobs:
         id: do_test_2
         run: pytest test/profiler
       - name: Check failure
-        if: steps.do_test_2.status == 'failure'
+        if: steps.do_test_2.status != 'success'
         run: exit 22
