--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Do testing
         id: do_test_1
         run: pytest test/test_bundled_inputs.py test/test_comparison_utils.py
-      - name: Check failure
-        if: steps.do_test_1.status != 'success'
-        run: exit 11
+      # - name: Check failure
+      #   if: steps.do_test_1.status != 'success'
+      #   run: exit 11
   
   another-py-test:
     runs-on: self-hosted
@@ -34,6 +34,6 @@ jobs:
       - name: Do testing
         id: do_test_2
         run: pytest test/profiler
-      - name: Check failure
-        if: steps.do_test_2.status != 'success'
-        run: exit 22
+      # - name: Check failure
+      #   if: steps.do_test_2.status != 'success'
+      #   run: exit 22
