--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,8 +34,7 @@ jobs:
           pip install expecttest
       - name: Do testing
         id: do_test_2
-        run: pytest test/profiler
-        continue-on-error: true
+        run: pytest test/profiler test1.py
       # - name: Check failure
       #   if: steps.do_test_2.status != 'success'
       #   run: exit 22
